[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lotto_psidney"
version = "0.0.1"
authors = [
  { name="Patrick Sidney", email="patricksidney@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/psidney/megamillions-checker"
"Bug Tracker" = "https://github.com/psidney/megamillions-checker/issues"